<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/xiaoyuanshenghuo"
    android:gravity="center_vertical|right"
    android:paddingRight="20dp"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/campusBuild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:text="@string/campusBuild"/>
    <Button
        android:id="@+id/campusScenery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:text="@string/campusScenery"/>
    <Button
        android:id="@+id/freshAssist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:text="@string/freshAssist"/>
    <Button
        android:id="@+id/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:text="@string/goBack"/>

</LinearLayout>
